hw1/_build/_log
### Starting build.
# Target: main.ml.depends, tags: { extension:ml, file:main.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules main.ml > main.ml.depends # cached
# Target: util/assert.ml.depends, tags: { extension:ml, file:util/assert.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules util/assert.ml > util/assert.ml.depends # cached
# Target: util/assert.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:util/assert.cmo, file:util/assert.ml, implem, ocaml, quiet }
ocamlc.opt -c -I util -o util/assert.cmo util/assert.ml # cached
# Target: gradedtests.ml.depends, tags: { extension:ml, file:gradedtests.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules gradedtests.ml > gradedtests.ml.depends # cached
# Target: hellocaml.ml.depends, tags: { extension:ml, file:hellocaml.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules hellocaml.ml > hellocaml.ml.depends
# Target: hellocaml.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:hellocaml.cmo, file:hellocaml.ml, implem, ocaml, quiet }
ocamlc.opt -c -I util -o hellocaml.cmo hellocaml.ml
+ ocamlc.opt -c -I util -o hellocaml.cmo hellocaml.ml
File "hellocaml.ml", line 1053, characters 52-53:
1053 |                                         | _ -> Add (x, (optimize e2))
                                                           ^
Error: This expression has type int64 but an expression was expected of type
         exp
Command exited with code 2.
# Compilation unsuccessful.
